--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfólio</title>
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -20,16 +20,16 @@
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-      <p class="apresentacao__conteudo__texto">Olá! Sou Guilherme Aguiar, desenvolvedor Front-end com conhecimento em HTML, CSS e JavaScript. Sempre buscando melhorar, e também em busca do meu primeiro emprego como desenvolvedor Front-end. </p>
+      <p class="apresentacao__conteudo__texto">Olá! Sou Guilherme Aguiar, futuro desenvolvedor Front-end com conhecimento em HTML, CSS e JavaScript. Esse é um dos meus Portfólios, espero que gostem! </p>
       <div class="apresentacao__links">
         <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-        <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/guilherme-aguiar-128960231/"> <img src="./assets/linkedin.png"> Linkedin
-          <a class="apresentacao__links__navegacao" href="https://github.com/guiaguiardev"> <img src="./assets/github.png"> Github
-            <a class="apresentacao__links__navegacao" href="https://www.instagram.com/guiiaguuiar_/"> <img src="./assets/instagram.png"> instagram
+        <a class="apresentacao__links__navegacao" href="https://www.linkedin.com/in/guilherme-aguiar-128960231/"> <img src="./img/linkedin.png"> Linkedin
+          <a class="apresentacao__links__navegacao" href="https://github.com/guiaguiardev"> <img src="./img/github.png"> Github
+            <a class="apresentacao__links__navegacao" href="https://www.instagram.com/guiiaguuiar_/"> <img src="./img/instagram.png"> instagram
             </a>
       </div>
     </section>
-    <img class="apresentacao__imagem" src="./assets/imagem2.png" alt="Guilherme Aguiar">
+    <img class="apresentacao__imagem" src="./img/developer-activity-animate.svg" alt="imagem-ilustrativa">
   </main>
   <footer class="rodape">
     <p>Desenvolvido por Guilherme Aguiar.</p>
