--- a/curriculo.html
+++ b/curriculo.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currículo</title>
-  <link rel="stylesheet" href="./styles/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -35,12 +35,12 @@
       <div class="apresentacao__conteudo__texto">
         <ul class="apresentacao__conteudo__texto">
           <li>Cursando - Graduação em Análise e Desenvolvimento de Sistemas - FMU (3 Semestre).</li>
-          <li>Curso completo de HTML - Alura</li>
-          <li>Curso completo de CSS - Alura</li>
+          <li>Formação em HTML - Alura</li>
+          <li>Formação em CSS - Alura</li>
         </ul>
       </div>
     </section>
-    <img class="apresentacao__imagem" src="./assets/imagem--curriculo.png" alt="Currículo">
+    <img class="apresentacao__imagem" src="./img/profiling-animate.svg" alt="Currículo">
   </main>
 </body>
 
