--- a/about.html
+++ b/about.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sobre mim</title>
-  <link rel="stylesheet" href="styles/style.css">
+  <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
@@ -21,15 +21,13 @@
   <main class="apresentacao">
     <section class="apresentacao__conteudo">
       <h1 class="apresentacao__conteudo__titulo">Sobre Mim</h1>
-      <p class="apresentacao__conteudo__texto">Me chamo Guilherme Aguiar, tenho 19 anos de idade e moro na cidade de São Paulo. Sou mais um jovem que sonha em se tornar programador, e tenho como principal meta conseguir uma vaga de Desenvolvedor Front-end. Tenho muita vontade de crescer dentro da área, sempre apto a buscar conhecimento para melhorar. No ano de 2022 eu comecei minha carreira profissional, com meu primeiro emprego sendo dentro da área de TI da empresa Allcare Benefícios, sou muito grato pela oportunidade que me deram e pelos aprendizados diários, pois foi lá que obtive e ainda estou obtendo todo o conhecimento e experiência que carrego hoje.</p>
-      <p class="apresentacao__conteudo__texto"> Comecei com a função de Help Desk, onde foi meu primeiro 'start' dentro da área de ti, e foi muito importante para eu aprender como funciona o TI, pois me deu uma visão geral do que cada grupo é responsável, principalmente por realizar o escalonamento das atividades dentro da Infraestrutura e Sistemas. No tempo que tive como Suporte, também foi muito importante, pois aprendi a parte técnica da coisa, como realizar melhorias, fazer manutenção das máquinas da empresa e principalmente a solucionar os problemas do dia a dia. Agora dentro do grupo de Segurança da Informação, está sendo uma etapa muito legal, pois estou obtendo uma visão geral de como funciona a Segurança da Informação; de como se defender, evitar os ataques diários que sofremos, e também uma visão geral da parte de Redes.</p>
+      <p class="apresentacao__conteudo__texto">Me chamo Guilherme Aguiar, tenho 19 anos de idade e moro na cidade de São Paulo. Sou mais um jovem que sonha em se tornar programador, e tenho como principal meta conseguir uma vaga de Desenvolvedor Front-end. Tenho muita vontade de crescer dentro da área, sempre apto a buscar conhecimento para melhorar.</p>
+      <p class="apresentacao__conteudo__texto"> No ano de 2022 eu comecei minha carreira profissional, com meu primeiro emprego sendo dentro da área de TI da empresa Allcare Benefícios. E por lá já passei pelas equipes de Help Desk, Suporte Desktop e Segurança da Informação. Sou muito grato pela oportunidade que me deram e pelos aprendizados diários, pois foi lá que obtive e ainda estou obtendo todo o conhecimento e experiência que carrego hoje.</p>
     </section>
-    <img class="apresentacao__imagem" src="./assets/Eu.jpeg" alt="Guilherme Aguiar">
+    <img class="apresentacao__imagem-eu" src="./img/Eu.jpeg" alt="Guilherme Aguiar">
   </main>
 
-  <footer class="rodape">
-    <p>Desenvolvido por Guilherme Aguiar.</p>
-  </footer>
+  <footer></footer>
 </body>
 
 </html>
